# retroget

./: .gitignore  LICENSE  README.md  pyproject.toml  systeminfo.example.json
src/retroget/: external.py  main_cli.py  network.py  registry.py
